# ros2-custom-robot-gazebo

./: README.md  README.txt  package.xml  setup.cfg  setup.py
launch/: sim.launch.py
my_robot_project/: follower_node.py  target_publisher.py
urdf/: robot.urdf
